# dstr

./: CMakeLists.txt  Doxyfile  Makefile  NMakefile  README.md  SConstruct  dstr.c  dstr.h  dstr_altnames.h  dstr_impl.h  dstr_inlines.h  dstr_test.c  dstr_test.cpp  dstr_test.sh  dstring.hpp  dstrtest.c  dstrtest_pp.cpp  test_dgets.cpp
.github/workflows/: codeql.yml
include/dstr/: dstr.h  dstr_regex_fwd.h  dstring.hpp  dstring_regex.hpp  dstring_view.hpp  dstringstream.hpp
src/: dstr.c  dstr_internal.h  dstr_regex.c  dstr_regex_common.h  dstring.cpp  dstring_regex.cpp
test/: dstr_test.sh  dstrtest.c  dstrtest_pp.cpp  test_algs.cpp  test_dgets.cpp  test_dstr.c  test_dstr_regex.c  test_dstring.cpp  test_dstring_regex.cpp  test_dstringview.cpp  test_hash.cpp  test_map.cpp  test_regex.cpp  test_regex_c.c  test_tokens.cpp  test_vector.cpp  test_view.cpp
win32/: NMakefile  build.bat
win32/bcc5/: Makefile  stdbool.h
